--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>JavaScript Content!</title>
   <style>
     #word-options {
-      font-size: 36px;
+      font-size: 52px;
       font-weight: bold;
       color: grey;
-      margin: 0 0 0 40px;
-      padding: 20px;
+      margin: 0 0 0 36px;
+      padding: 18px;
     }
   </style>
 
@@ -33,7 +33,7 @@
       "Chicken",
       "Soccer",
       "Baseball",
-      "Basketvall",
+      "Basketball",
       "Asia",
       "Africa",
       "Europe",
@@ -47,11 +47,37 @@
 
     var targetDiv = document.getElementById("word-options");
     var wordGuessValue = "";
+    var lettersGuessed = [];
+
     // ...
 
     function isLetter(str) {
         return str.length === 1 && str.match(/[a-z]/i);
     }
+
+    function displayWordGuess(wordToGuess, wordGuessValue) {
+
+        var wordToDisplay = "";
+        console.log("--------------------");
+        console.log("wordToGuess="+wordToGuess);
+        console.log("wordGuessValue="+wordGuessValue);
+        console.log("wordGuessValue.length="+wordGuessValue.length);
+        if (wordGuessValue.length == 0) {
+            for (i = 0; i < wordToGuess.length; i++) {
+                wordToDisplay = wordToDisplay + wordGuessValue[i] + "_ ";
+            }
+        }
+        else {
+            for (i = 0; i < wordToGuess.length; i++) {
+                wordToDisplay = wordToDisplay + wordGuessValue[i] + " ";
+            }
+        }
+        console.log("String to Display: "+wordToDisplay);
+        targetDiv.textContent = wordToDisplay;
+        console.log("--------------------");
+        return;
+    }
+
     // 2. Create a for loop that creates HTML content of all the drinks using JavaScript.
     // HINT: You will need to use each of the following methods: createElement, textContent, appendChild
     // ...
@@ -63,28 +89,52 @@
     //console.log(rndNum);
 
     wordToGuess = wordList[rndNum];
+
+    // initialize word to guess to underscores
     console.log(wordToGuess);
     numLetters = wordToGuess.length;
     console.log(numLetters);
 
-    for (i = 0; i < wordToGuess.length; i++) { 
-        wordGuessValue = wordGuessValue + "_ ";
+    wordGuessValue = "";
+    for (i = 0; i < wordToGuess.length; i++) {
+        wordGuessValue = wordGuessValue + "_";
     }
-    console.log(wordGuessValue);
 
-    targetDiv.textContent = wordGuessValue;
-
+    console.log("wordGuessValue: "+wordGuessValue)
+    displayWordGuess(wordToGuess, wordGuessValue);
     document.onkeyup = function(event) {
 
         // Determines which key was pressed.
+        // we need to get a letter then save the letter
         var userGuess = event.key;
         if (isLetter(userGuess)) {
-            console.log("userGuess is a litter: "+userGuess)
+            console.log("userGuess is a letter: "+userGuess)
+            lettersGuessed.push(userGuess);
+            console.log("lettersGuessed: "+lettersGuessed)
+            // search word for letter.
+            var n = wordToGuess.search(userGuess);
+            console.log("letter in word: "+n);
+            if (n == -1) {
+                console.log("letter no in word")
+            }
+            else {
+                for (i = 0; i < wordToGuess.length; i++) {
+                    console.log("i="+i+" wordToGuess[i]="+wordToGuess[i]+" userGuess="+userGuess)
+                    if (wordToGuess[i] === userGuess) {
+                        wordGuessValue = wordGuessValue.substring(0, i) + userGuess + wordGuessValue.substring(i + 1);
+                        //wordGuessValue[i] = userGuess;
+                        console.log("loop: i="+i+" wordToGuess[i]="+wordToGuess[i]+" userGuess="+userGuess)
+                        console.log("loop: wordGuessValue = " + wordGuessValue);
+                    }
+                }
+                displayWordGuess(wordToGuess, wordGuessValue);
+            }   
         }
         else {
             return;
         }
-/*
+
+        /*
         myplay = document.getElementById("me");
         myplay.textContent = userGuess;
 
