--- a/index.html
+++ b/index.html
@@ -1,164 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>JavaScript Content!</title>
-  <style>
-    #word-options {
-      font-size: 52px;
-      font-weight: bold;
-      color: grey;
-      margin: 0 0 0 36px;
-      padding: 18px;
-    }
-  </style>
 
+<head>
+    <meta charset="UTF-8">
+    <title>JavaScript Content!</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
+
 <body>
 
-  <h1>Let's Play the Word Game!</h1>
-  <hr>
+    <div id="header">
+        <img src="assets/images/word_guess.jpg" width="800" class="header_image">
+    </div>
 
-  <!-- Here we create a word-options div -->
-  <div id="word-options"></div>
+    <!-- Here we create a word-options div -->
+    <div id="word-options"></div>
+    <div id="word-status">
+        <div>Number of Guesses Remaining: </div>
+        <div id="word-chances-remaining">10</div>
+    </div>
+    <script type="text/javascript">
 
-  <script type="text/javascript">
+        // Array holds all of the drinks available
+        var wordList = [
+            "Coffee",
+            "Espresso",
+            "Cappuccino",
+            "Steak",
+            "Chicken",
+            "Soccer",
+            "Baseball",
+            "Basketball",
+            "Asia",
+            "Africa",
+            "Europe",
+            "History",
+            "Chocolate",
+            "Coyote"
+        ];
 
-    // Array holds all of the drinks available
-    var wordList = [
-      "Coffee",
-      "Espresso",
-      "Cappuccino",
-      "Steak",
-      "Chicken",
-      "Soccer",
-      "Baseball",
-      "Basketball",
-      "Asia",
-      "Africa",
-      "Europe",
-      "History",
-      "Chocolate",
-      "Coyote"
-    ];
+        // 1. Create code that "grabs" the div with the matching id (#drink-options);
 
-    // 1. Create code that "grabs" the div with the matching id (#drink-options);
-    // ...
+        var targetDiv = document.getElementById("word-options");
+        var chancesRemainDiv = document.getElementById("word-chances-remaining");
+        var wordGuessValue = "";
+        var lettersGuessed = [];
+        var chances_remaining = 10;
+        var gameOver = false;
 
-    var targetDiv = document.getElementById("word-options");
-    var wordGuessValue = "";
-    var lettersGuessed = [];
+        // ...
 
-    // ...
-
-    function isLetter(str) {
-        return str.length === 1 && str.match(/[a-z]/i);
-    }
-
-    function displayWordGuess(wordToGuess, wordGuessValue) {
-
-        var wordToDisplay = "";
-        console.log("--------------------");
-        console.log("wordToGuess="+wordToGuess);
-        console.log("wordGuessValue="+wordGuessValue);
-        console.log("wordGuessValue.length="+wordGuessValue.length);
-        if (wordGuessValue.length == 0) {
-            for (i = 0; i < wordToGuess.length; i++) {
-                wordToDisplay = wordToDisplay + wordGuessValue[i] + "_ ";
-            }
+        function isLetter(str) {
+            return str.length === 1 && str.match(/[a-z]/i);
         }
-        else {
-            for (i = 0; i < wordToGuess.length; i++) {
-                wordToDisplay = wordToDisplay + wordGuessValue[i] + " ";
-            }
-        }
-        console.log("String to Display: "+wordToDisplay);
-        targetDiv.textContent = wordToDisplay;
-        console.log("--------------------");
-        return;
-    }
 
-    // 2. Create a for loop that creates HTML content of all the drinks using JavaScript.
-    // HINT: You will need to use each of the following methods: createElement, textContent, appendChild
-    // ...
+        function displayWordGuess(wordToGuess, wordGuessValue) {
 
-    numWords = wordList.length;
-    //console.log(numWords);
-
-    rndNum = Math.floor( Math.random() * numWords);
-    //console.log(rndNum);
-
-    wordToGuess = wordList[rndNum];
-
-    // initialize word to guess to underscores
-    console.log(wordToGuess);
-    numLetters = wordToGuess.length;
-    console.log(numLetters);
-
-    wordGuessValue = "";
-    for (i = 0; i < wordToGuess.length; i++) {
-        wordGuessValue = wordGuessValue + "_";
-    }
-
-    console.log("wordGuessValue: "+wordGuessValue)
-    displayWordGuess(wordToGuess, wordGuessValue);
-    document.onkeyup = function(event) {
-
-        // Determines which key was pressed.
-        // we need to get a letter then save the letter
-        var userGuess = event.key;
-        if (isLetter(userGuess)) {
-            console.log("userGuess is a letter: "+userGuess)
-            lettersGuessed.push(userGuess);
-            console.log("lettersGuessed: "+lettersGuessed)
-            // search word for letter.
-            var n = wordToGuess.search(userGuess);
-            console.log("letter in word: "+n);
-            if (n == -1) {
-                console.log("letter no in word")
+            var wordToDisplay = "";
+            //console.log("--------------------");
+            //console.log("wordToGuess="+wordToGuess);
+            //console.log("wordGuessValue="+wordGuessValue);
+            //console.log("wordGuessValue.length="+wordGuessValue.length);
+            if (wordGuessValue.length == 0) {
+                for (i = 0; i < wordToGuess.length; i++) {
+                    wordToDisplay = wordToDisplay + wordGuessValue[i] + "_ ";
+                }
             }
             else {
                 for (i = 0; i < wordToGuess.length; i++) {
-                    console.log("i="+i+" wordToGuess[i]="+wordToGuess[i]+" userGuess="+userGuess)
-                    if (wordToGuess[i] === userGuess) {
-                        wordGuessValue = wordGuessValue.substring(0, i) + userGuess + wordGuessValue.substring(i + 1);
-                        //wordGuessValue[i] = userGuess;
-                        console.log("loop: i="+i+" wordToGuess[i]="+wordToGuess[i]+" userGuess="+userGuess)
-                        console.log("loop: wordGuessValue = " + wordGuessValue);
-                    }
+                    wordToDisplay = wordToDisplay + wordGuessValue[i] + " ";
                 }
-                displayWordGuess(wordToGuess, wordGuessValue);
-            }   
-        }
-        else {
+            }
+            //console.log("String to Display: "+wordToDisplay);
+            targetDiv.textContent = wordToDisplay;
+            //console.log("--------------------");
             return;
         }
 
-        /*
-        myplay = document.getElementById("me");
-        myplay.textContent = userGuess;
+        // 2. Create a for loop that creates HTML content of all the drinks using JavaScript.
+        // HINT: You will need to use each of the following methods: createElement, textContent, appendChild
+        // ...
 
-        // Randomly chooses a choice from the options array. This is the Computer's guess.
-        var computerGuess = computerChoices[Math.floor(Math.random() * computerChoices.length)];
+        numWords = wordList.length;
+        //console.log(numWords);
 
-        machineplay = document.getElementById("machine");
-        machineplay.textContent = computerGuess;
-*/
-    }
+        rndNum = Math.floor(Math.random() * numWords);
+        //console.log(rndNum);
 
+        wordToGuess = wordList[rndNum];
+        wordToGuess = wordToGuess.toLowerCase();
 
-/*
-    targetDiv.textContent = wordList[0];
-    for (i = 1; i < wordList.length; i++) { 
-      var newDiv = document.createElement("div");
-      newDiv.textContent = wordList[i];
-      targetDiv.appendChild(newDiv);
-      console.log (wordList[i]);
-    }
-*/    
-    // ...
+        // initialize word to guess to underscores
+        console.log(wordToGuess);
+        numLetters = wordToGuess.length;
+        console.log(numLetters);
 
-  </script>
+        wordGuessValue = "";
+        for (i = 0; i < wordToGuess.length; i++) {
+            wordGuessValue = wordGuessValue + "_";
+        }
+
+        console.log("wordGuessValue: " + wordGuessValue)
+        displayWordGuess(wordToGuess, wordGuessValue);
+        document.onkeyup = function (event) {
+
+            if (gameOver == true) {
+                return;
+            }
+            // Determines which key was pressed.
+            // we need to get a letter then save the letter
+            var userGuess = event.key;
+            if (isLetter(userGuess)) {
+                console.log("userGuess is a letter: " + userGuess)
+                lettersGuessed.push(userGuess);
+                console.log("lettersGuessed: " + lettersGuessed)
+                // search word for letter.
+                var n = wordToGuess.search(userGuess);
+                console.log("letter in word: " + n);
+                if (n == -1) {
+                    console.log("letter not in word")
+                    chances_remaining--;
+                    chancesRemainDiv.textContent = chances_remaining;
+                    console.log("chances_remaining: " + chances_remaining);
+                    if (chances_remaining == 0) {
+                        targetDiv.textContent ="Sorry you lost! Try again!";
+                        gameOver= true;
+                    }
+                }
+                else {
+                    for (i = 0; i < wordToGuess.length; i++) {
+                        console.log("i=" + i + " wordToGuess[i]=" + wordToGuess[i] + " userGuess=" + userGuess)
+                        if (wordToGuess[i] === userGuess) {
+                            wordGuessValue = wordGuessValue.substring(0, i) + userGuess + wordGuessValue.substring(i + 1);
+                            //wordGuessValue[i] = userGuess;
+                            console.log("loop: i=" + i + " wordToGuess[i]=" + wordToGuess[i] + " userGuess=" + userGuess)
+                            console.log("loop: wordGuessValue = " + wordGuessValue);
+                        }
+                    }
+                    displayWordGuess(wordToGuess, wordGuessValue);
+                    if (wordGuessValue.search("_") == -1) {
+                        status = "Congratulation! You won!";
+                    }
+                    else {
+                        //chances_remaining--;
+                        //chancesRemainDiv.textContent = chances_remaining;
+                        //console.log("chances_remaining: " + chances_remaining);
+                    }
+                }
+            }
+            else {
+                return;
+            }
+        }
+    </script>
 
 </body>
+
 </html>
