--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Word Guess Game</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
 </head>
 
 <body>
@@ -26,17 +27,22 @@
  	<div id="row">
 	    <div class="col-lg-2 mt-lg-2">
     	</div>
-	    <div class="col-lg-8 mt-lg-2">
+	    <div class="col-lg-9 mt-lg-2">
 		    <div id="main">
 	    		<div id="word-won-lost"></div>
 		    	<div id="word-options"></div>
+		    	<div id="incorrect-letters-guessed"></div>
 	    		<div id="word-status">
 		    	    <div id="numGuessesRemaining">Number of Guesses Remaining: </div>
         			<div id="word-chances-remaining">10</div>
 		    	</div>
+	    		<div id="games-won-lost">
+		    	    <div id="wins">Wins: 0</div>
+        			<div id="losses">Losses: 0</div>
+		    	</div>
 		    </div>
    		</div>
-	    <div class="col-lg-2 mt-lg-2">
+	    <div class="col-lg-1 mt-lg-2">
     	</div>
 	</div>
  	<div id="row">
